fix home page hero on mobile

--- a/src/containers/HomeHero/HomeHero.module.scss
+++ b/src/containers/HomeHero/HomeHero.module.scss
@@ -11,7 +11,7 @@
   width: 100%;
 
   @include md-max {
-    margin-top: 75px;
+    margin-top: 100px;
     min-height: none;
     padding-bottom: 100px;
   }
@@ -34,6 +34,7 @@
     }
 
     @include sm-max {
+      font-size: 6rem;
       text-align: center;
     }
 
